--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "babel . --ignore node_modules,build --out-dir build",
-    "start": "nodemon -r dotenv/config -r babel-register server.js",
+    "start": "node server.js",
     "start:prod": "node -r dotenv/config -r build/server.js"
   }
 }
