--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": {},
   "license": "MIT",
   "engines": {
-    "node": "9.1.0"
+    "node": ">9"
   },
   "dependencies": {
     "concurrently": "^3.1.0",
@@ -15,6 +15,6 @@
     "clean": "concurrently \"rimraf node_modules\" \"cd client && rimraf node_modules build\" \"cd server && rimraf node_modules build\"",
     "heroku-postbuild": "yarn install",
     "install": "(cd client && yarn) && (cd ..) && (cd server && yarn)",
-    "start": "concurrently \"cd client && PORT=3000 yarn start\" \"cd server && PORT=3001 yarn start\""
+    "start": "concurrently \"cd client && PORT=3000 yarn start\" \"cd server && PORT=3001 yarn start:\""
   }
 }
