--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": {},
   "license": "MIT",
   "engines": {
-    "node": ">9"
+    "node": "9"
   },
   "dependencies": {
     "concurrently": "^3.1.0",
