--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "crae-simple",
+  "name": "crae_test_app",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": {},
   "license": "MIT",
-  "engines": {
-    "node": "9"
-  },
   "dependencies": {
-    "concurrently": "^3.1.0",
-    "rimraf": "^2.5.4"
+    "concurrently": "^3.5.0"
+  },
+  "engines": {
+    "node": "8.1.2"
   },
   "scripts": {
-    "clean": "concurrently \"rimraf node_modules\" \"cd client && rimraf node_modules build\" \"cd server && rimraf node_modules build\"",
-    "heroku-postbuild": "yarn install",
-    "install": "(cd client && yarn) && (cd ..) && (cd server && yarn)",
-    "start": "concurrently \"cd client && yarn start\" \"cd server && yarn start\""
+    "install": "(cd client && yarn) && (cd server && yarn)",
+    "start": "concurrently --names \"CLIENT,SERVER\" -c \"bgBlue.bold,bgMagenta.bold\" \"cd client && PORT=3000 yarn start\" \"cd server && PORT=3001 yarn start\"",
+    "build": "concurrently \"cd client && yarn build \" \"cd server && yarn build\"",
+    "start:prod": "cd server && yarn start:prod",
+    "heroku-postbuild": "yarn build"
   }
 }
